[metadata]
name = penparser
version = file: VERSION
maintainer = Zenoss, Inc.
maintainer_email = dev@zenoss.com
url = https://www.zenoss.com
description = Parse IANA Private Enterprise Number data into JSON format
license = Commercial
dependencies =
	pathlib2; python_version<"3.3"

[bdist_wheel]
universal = 1

[options]
packages = find:
package_dir =
	=src
namespace_packages =
	zenoss

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	parsepen = zenoss.pen:parse_pen_data
